Fin seccion 10 - Auth

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3005
 DB_CNN=mongodb+srv://MEAN_USER:MMlz2U4fPjr4xvrn@micluster.lusod.mongodb.net/hospitaldb
+JWT_SECRET=Holsd2398123098123HD82@3343K
